tests/baselines/reference/returnStatement1.errors.txt
tests/cases/compiler/returnStatement1.ts(5,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/returnStatement1.ts (1 errors) ====
    function f() {
        return function (s) {
            var x = s;
        };
        ("harmless extra line");
        ~
!!! error TS7027: Unreachable code detected.
    }